Don't fail on profile changes in GpuVideoDecoder.

This restriction is artificial; or at least I can't make it fail
when the profile changes. The hardware decoders I've tried (Android,
Windows, Mac) don't seem to care if the profile actually changes.

In fact, MSE has always lied about the h264 profile (!), it always
specifies H264PROFILE_MAIN regardless of the actual profile. The
only parser sending this information correctly is the TS parser
used by Chromecast -- which then hits this check.

If the profile is actually unsupported we will still fail during
the check of SupportedProfiles.

BUG=640269
TEST=http://storage.googleapis.com/dalecurtis/mse_profile_change.html

Review-Url: https://codereview.chromium.org/2273793002
Cr-Commit-Position: refs/heads/master@{#414164}

Former-commit-id: 3bd54ab36da9eb69239bfc95ee5e0e81ea3c42c0